<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:fitsSystemWindows="true"
              android:orientation="vertical"
              tools:context="com.slayer.cxj.myapplication.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF0000"
        android:padding="5dp"
        android:text="@string/Title"
        android:textAlignment="center"
        android:textSize="40sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#00FF00"
        android:padding="5dp"
        android:text="@string/Title"
        android:textAlignment="center"
        android:textSize="30sp"/>

    <CheckBox
        android:id="@+id/x_art"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/x_art"/>

    <CheckBox
        android:id="@+id/met_art"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/met_art"/>

    <CheckBox
        android:id="@+id/all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_all"
        />

    <RadioGroup
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/male">

        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/g_male"/>

        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/g_female"/>

        <RadioButton
            android:id="@+id/g3rd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/g_3rd"/>
    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shopping_cart"/>

    <Button
        android:id="@+id/img_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/images"/>

    <Button
        android:id="@+id/layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_layout"/>

    <ImageView
        android:id="@+id/img01"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="#FF0000"
        android:scaleType="fitStart"
        android:src="@drawable/koala"/>

</LinearLayout>
