<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.slayer.cxj.myapplication.ShoppingCart">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/tmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tmall"/>

        <CheckBox
            android:id="@+id/iphone7plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/iphone7plus"/>

        <CheckBox
            android:id="@+id/iphone6splus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/iphone6splus"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/tmall_market"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tmall_market"/>

        <CheckBox
            android:id="@+id/cola"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/cola"/>

        <CheckBox
            android:id="@+id/pepsi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/pepsi"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <CheckBox
            android:id="@+id/select_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_all"/>

    </LinearLayout>

</LinearLayout>
