<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.slayer.cxj.myapplication.LayoutActivity">

    <TextView
        android:id="@+id/leftText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/rightText"
        android:text="@string/text_left"
        android:textSize="20sp"
        android:layout_marginTop="0dp"/>

    <TextView
        android:id="@+id/rightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_right"
        android:layout_below="@+id/leftText"
        android:textSize="20sp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="0dp"/>

    <TextView
        android:id="@+id/downText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_down"
        android:textSize="20sp"
        android:layout_below="@+id/rightText"
        android:layout_alignEnd="@+id/rightText"
        android:layout_marginTop="0dp"/>


</RelativeLayout>
